[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-telegram"
version = "0.1.0"
description = "A Telegram bot powered by Google's Gemini AI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "tarsislimadev"}
]
dependencies = [
    "python-telegram-bot",
    "google-generativeai",
    "requests",
]

[project.urls]
Homepage = "https://github.com/tarsislimadev/gemini-telegram"
Repository = "https://github.com/tarsislimadev/gemini-telegram"
